# Machine-Learning-Based-Implicit-Physical-Parametric-Inference-for-CFD-Simulation-Promotion

./: README.md
IPPI-LBM/: CMakeLists.txt  NodeAndLattice.cpp  NodeAndLattice.h  Parameter.h  Point2D.h  Readme.md  main.cpp  mesh.cpp  mesh.h
NNmodel/: AutoT01.pt  AutoT03.pt  AutoT05.pt  AutoT07.pt
